syntax = "proto3";

option csharp_namespace = "PublicApi.Application.Proto";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

package currency;

service CurrencyService{
	rpc Get(Request) returns (CurrencyResponse);
	rpc GetOnDate(OnDateRequest) returns (CurrencyOnDateResponse);
	rpc GetSettings(google.protobuf.Empty) returns (Settings);
}

message CurrencyResponse{
	string code = 1;
	double value = 2;
}

message CurrencyOnDateResponse{
	string code = 1;
	double value = 2;
	google.protobuf.Timestamp date = 3;
}

message Request{
	string code = 1;
}

message OnDateRequest{
	string code = 1;
	google.protobuf.Timestamp date = 2;
}

message Settings{
	string base_currency = 1;
	bool available_queries = 2;
}